--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,12 @@ android {
     buildFeatures {
         viewBinding true
     }
-
+    buildTypes.each {
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("api-keys.properties").newDataInputStream())
+        def filmApiKey = properties.getProperty("filmApiKey", "")
+        it.buildConfigField "String", "FILM_API_KEY", filmApiKey
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -49,7 +54,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
