--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,17 +33,19 @@ android {
     buildFeatures {
         viewBinding true
     }
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.FilmSearch
+        }
+    }
     buildTypes.each {
         Properties properties = new Properties()
         properties.load(project.rootProject.file("api-keys.properties").newDataInputStream())
         def filmApiKey = properties.getProperty("filmApiKey", "")
         it.buildConfigField "String", "FILM_API_KEY", filmApiKey
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
+        def googleMapsApiKey = properties.getProperty("googleMapsApiKey", "")
+        it.buildConfigField "String", "GOOGLE_MAPS_API_KEY", googleMapsApiKey
+
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -76,4 +78,7 @@ dependencies {
     //Room
     implementation 'androidx.room:room-runtime:2.2.6'
     kapt 'androidx.room:room-compiler:2.2.6'
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
 }
