--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.afrosin.filmsearch"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -31,6 +31,9 @@ android {
                     details.useVersion "1.+"
                 }
             }
+        }
+        configurations.all {
+            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
         }
     }
 
@@ -62,7 +65,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -109,6 +112,14 @@ dependencies {
     implementation 'com.google.dagger:dagger-android:2.35.1'
     kapt "com.google.dagger:dagger-android-processor:2.35.1"
     implementation 'com.google.dagger:dagger-android-support:2.35.1'
+
+    // mockito
+    testImplementation "org.mockito:mockito-core:2.19.0"
+    testImplementation 'org.mockito:mockito-inline:2.8.9'
+    testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
+        exclude group: 'org.jetbrains.kotlin'
+        exclude group: 'org.mockito'
+    }
 
 
 }
